# cuda_cpp_programming

./: .gitignore  README.md
activation_functions/: activations_gpu.cu
attention/: CMakeLists.txt  bahdanau_att.cu  dot_product.cu  luong_att.cu
attention/src/: AttentionLayer.cpp  AttentionLayer.h  bahdanau_att.cu  cuda_macros.cuh  cuda_utils.cu  cuda_utils.cuh  dot_product.cu  dot_product.cuh  luong_att.cu  main.cpp  self_attention.cu  self_attention.cuh  utils.cpp  utils.h
attention/test/: test.cpp
gaussian_blur/: gaussian_blur.cu  gaussian_blur_cpu.cpp  gaussian_blur_optimized.cu
histogram/: histogram.cu
matrix_multiplication/: matrix_mul.cu
quantization/: CMakeLists.txt  setup.py
quantization/bindings/: quantize_binding.cpp  quantize_binding.ipy
quantization/python/: main.py
quantization/src/: LLM_int8.cu  LLM_int8.cuh  asymmetric.cu  asymmetric.cuh  cuda_macros.cuh  cuda_utils.cu  cuda_utils.cuh  quantization_cpu.cpp  quantization_cpu.h  symmetric.cu  symmetric.cuh  utils.cpp  utils.h
quantization/test/: test.cpp
softmax/: softmax.cu
spMV/: CMakeLists.txt
spMV/src/: COOMatrixGPU.cuh  CSRMatrixGPU.cuh  cuda_macros.cuh  main.cpp  spMV.cu  spMV.cuh  utils.cpp  utils.h
spMV/test/: test.cpp
sum/: sum.cu  sum_int.cu
utils/: device_prop.cu
vector_addition/: vector_addition.cu
